--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Todo List</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
-    <div id="app"></div>
-    <p>test</p>
+    <div class="container">
+      <h1 class="bd-content-title">Todo list</h1>
+
+      <!-- Add New Todo List Item -->
+      <div class="add-new-item-container">
+        <input type="text" />
+        <button type="button" class="btn add-button">追加</button>
+      </div>
+
+      <!-- Unfished　Items -->
+      <div class="unfinished-items-container">
+        <h2>未完了のTODO</h2>
+        <ul class="list-group unfinished-items">
+          <li class="list-group-item">
+            <span class="todo-item">Cras justo odio</span>
+            <button type="button" class="btn done-button">完了</button>
+            <button type="button" class="btn delete-button">削除</button>
+          </li>
+          <li class="list-group-item">
+            <span class="todo-item">Dapibus ac facilisis in</span>
+            <button type="button" class="btn done-button">完了</button>
+            <button type="button" class="btn delete-button">削除</button>
+          </li>
+          <li class="list-group-item">
+            <span class="todo-item">Morbi leo risus</span>
+            <button type="button" class="btn done-button">完了</button>
+            <button type="button" class="btn delete-button">削除</button>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Fished　Items -->
+      <div class="mb-3 finished-items-container">
+        <h2>完了したTODO</h2>
+        <ul class="list-group finished-items">
+          <li class="list-group-item">
+            <span class="todo-item">Porta ac consectetur ac</span>
+            <button type="button" class="btn return-button">戻す</button>
+          </li>
+          <li class="list-group-item">
+            <span class="todo-item">Vestibulum at eros</span>
+            <button type="button" class="btn return-button">戻す</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
