Create Todo List Items

--- a/index.html
+++ b/index.html
@@ -16,29 +16,13 @@
         <button type="button" class="btn add-button">追加</button>
       </div>
 
-      <!-- Unfished　Items -->
+      <!-- Unfinished Items -->
       <div class="unfinished-items-container">
         <h2>未完了のTODO</h2>
-        <ul class="list-group unfinished-items">
-          <li class="list-group-item">
-            <span class="todo-item">Cras justo odio</span>
-            <button type="button" class="btn done-button">完了</button>
-            <button type="button" class="btn delete-button">削除</button>
-          </li>
-          <li class="list-group-item">
-            <span class="todo-item">Dapibus ac facilisis in</span>
-            <button type="button" class="btn done-button">完了</button>
-            <button type="button" class="btn delete-button">削除</button>
-          </li>
-          <li class="list-group-item">
-            <span class="todo-item">Morbi leo risus</span>
-            <button type="button" class="btn done-button">完了</button>
-            <button type="button" class="btn delete-button">削除</button>
-          </li>
-        </ul>
+        <ul class="list-group unfinished-items"></ul>
       </div>
 
-      <!-- Fished　Items -->
+      <!-- Finished Items -->
       <div class="mb-3 finished-items-container">
         <h2>完了したTODO</h2>
         <ul class="list-group finished-items">
